--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">01_FirstApp_GeoQuiz</string>
+    <string name="app_name">GeoQuiz</string>
     <string name="true_button">True</string>
-    <string name="false_button">false</string>
+    <string name="false_button">False</string>
     <string name="question_text">Canberra is the capital of Australia.</string>
 </resources>
